<resources>
    <!--登录注册-->
    <string name="register_title">注册</string>
    <string name="login_title">登录待续，体验更多功能</string>
    <string name="phone_number">手机号</string>
    <string name="login_hint">请输入手机号</string>
    <string name="send_msg">获取验证码</string>
    <string name="register_label">未注册手机验证后自动登录</string>
    <string name="resend_time_default">60s后可重新获取</string>
    <string name="resend_msg_label">重新获取验证码</string>

    <!--登录界面-->
    <string name="user_id">账号</string>
    <string name="password">密码</string>
    <string name="label_btn_login">登录</string>
    <string name="label_link_register">还没有账号？点击注册</string>

    <!--注册界面-->
    <string name="hint_reg_id">手机号</string>
    <string name="password2">确认密码</string>
    <string name="label_btn_reg">注册</string>
    <string name="label_link_login">已有账号？点击登录</string>

    <string name="app_name">待续</string>
    <string name="home">首页</string>
    <string name="recommend">推荐</string>
    <string name="write">+</string>
    <string name="message">消息</string>
    <string name="me">我的</string>
</resources>
