<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/et_margin_left"
        android:layout_marginRight="@dimen/et_margin_right">


        <TextView
            android:id="@+id/id_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="@dimen/login_title_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.polotin.daixu.CustomView.MyEditTextView
            android:id="@+id/id_et_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_login_title"
            android:layout_marginTop="@dimen/et_to_title_bottom"
            android:singleLine="true"
            android:hint="@string/login_hint"/>

        <Button
            android:id="@+id/id_btn_send_msg"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/id_et_phone_number"
            android:layout_marginTop="@dimen/send_msg_margin_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/send_msg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/id_btn_send_msg"
            android:layout_marginTop="@dimen/reg_hint_margin_top"
            app:layout_constraintLeft_toLeftOf="@+id/id_btn_send_msg"
            android:layout_marginLeft="@dimen/reg_hint_margin_left"
            android:text="@string/register_label"
            android:textSize="@dimen/register_hint_size"/>

    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/id_pb_login"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>