<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/id_edit_text_id_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_txt_id_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/id_label_id"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_txt_height"
            android:layout_marginRight="@dimen/label_margin_edit_text"
            android:gravity="center"
            android:text="@string/user_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/id_edit_text_id" />

        <EditText
            android:id="@+id/id_reg_edit_text_id"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="@dimen/edit_txt_height"
            android:hint="@string/hint_reg_id"
            app:layout_constraintLeft_toRightOf="@id/id_label_id"
            app:layout_constraintRight_toLeftOf="@id/id_btn_verify" />

        <Button
            android:id="@+id/id_btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="验证码"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/id_reg_edit_text_pwd_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_txt_pwd_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_edit_text_id_area">

        <TextView
            android:id="@+id/id_label_pwd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_txt_height"
            android:layout_marginRight="@dimen/label_margin_edit_text"
            android:gravity="center"
            android:text="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/id_edit_txt_pwd" />

        <EditText
            android:id="@+id/id_edit_txt_pwd"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="@dimen/edit_txt_height"
            app:layout_constraintLeft_toRightOf="@id/id_label_pwd"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/id_edit_text_confirm_pwd_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_txt_pwd_margin_top"
        app:layout_constraintTop_toBottomOf="@id/id_reg_edit_text_pwd_area"
        app:layout_constraintRight_toRightOf="@id/id_reg_edit_text_pwd_area">

        <TextView
            android:id="@+id/id_label_confirm_pwd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_txt_height"
            android:gravity="center"
            android:text="@string/password2"/>

        <EditText
            android:id="@+id/id_edit_txt_pwd2"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="@dimen/edit_txt_height"
            app:layout_constraintLeft_toRightOf="@id/id_label_confirm_pwd"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/id_btn_register"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_login_height"
        android:text="@string/label_btn_reg"
        android:layout_marginTop="@dimen/btn_login_margin_top"
        app:layout_constraintLeft_toLeftOf="@id/id_edit_text_id_area"
        app:layout_constraintRight_toRightOf="@id/id_edit_text_id_area"
        app:layout_constraintTop_toBottomOf="@id/id_edit_text_confirm_pwd_area"
        />

    <TextView
        android:id="@+id/id_link_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_link_login"
        android:layout_marginBottom="@dimen/label_link_login_margin_bottom"
        android:layout_marginRight="@dimen/label_link_login_margin_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/id_pb_login"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>